--- a/examples/index.html
+++ b/examples/index.html
@@ -2,16 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Feather</title>
+    <title>iFonts</title>
+    <link rel="stylesheet" href="if.css">
+    <link rel="stylesheet" href="if-classic.css">
   </head>
   <body>
-    <i data-feather="eye"></i>
-    <i data-feather="heart"></i>
-    <i data-feather="feather"></i>
-
-    <script src="https://unpkg.com/feather-icons"></script>
-    <script>
-      feather.replace();
-    </script>
+    <i class="ifs if-h1 if-2xl"></i>
+    <i class="ifs if-icons if-2xl"></i>
+    <i class="ifs if-0 if-2xl"></i>
   </body>
 </html>
