--- a/examples/if-classic.html
+++ b/examples/if-classic.html
@@ -9,7 +9,7 @@
   <body>
     <i class="ifs if-calculator-simple if-color-by if-2xs" style=" --if-color: blue;"></i>
     <i class="ifr if-loader if-color-danger if-lg if-spin"></i>
-    <i class="ifs if-bell if-color-by if-2xl if-shake" style=" --if-color: #f0de19;"></i>
+    <i class="ifl if-bell if-color-by if-2xl if-shake" style=" --if-color: #f0de19;"></i>
   </body>
 </html>
  
